# mxnet-rs

./: Cargo.toml  README.md  build.rs
examples/: gen.rs  gen_op.rs  num_gpus.rs
mxnet-sys/: Cargo.toml  README.md  build.rs  wrapper.h
mxnet-sys/src/: lib.rs
src/: autograd.rs  base.rs  context.rs  lib.rs  ndarray.rs  op_map.rs  operator.rs  symbol.rs
src/ndarray/: operator.rs
