[package]
name = "mxnet-rs"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"

[dependencies]
mxnet-sys = { git="https://github.com/SunDoge/mxnet-sys" }
lazy_static = "1.2"
ndarray = "0.12"
enum-str-derive = { git = "https://github.com/victorporof/rust-enum-str-derive.git" }

[dev-dependencies]
codegen = "0.1"